Added footer header and initial welcome page design

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,2 +1,12 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+
+body {
+  padding-top: 70px;
+}
+
+.text-large
+{
+  font-size: 1.5em;
+}
