--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,4 @@
 <div class="container">
   <h1> Welcome To Trivia</h1>
+  <%= link_to "Sign up now!", '#' , class: "btn btn-lg btn-primary" %>
 </div>
