--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,15 +1,14 @@
-<header class="navbar navbar-fixed-top navbar-inverse">
-  <div class="container">
+<nav class="navbar navbar-default">
+<div class="container">
+  <div class="container-fluid">
     <div class="navbar-header">
       <ul class="nav navbar-nav text-large">
         <li><%= link_to "Trivia", root_path, id: "home" %></li>
       </ul>
     </div>
-    <!--<ul class="navbar-brand"><li></li></ul>-->
-    <nav>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Sign in", '#' %></li>
       </ul>
-    </nav>
   </div>
-</header>
+</div>
+</nav>
