--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,14 @@
       </ul>
     </div>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Sign in", '#' %></li>
+        <% if logged_in?  %>
+          <li><%= link_to "Profile", current_user %></li>
+          <li><%= link_to "Log out", logout_path, method: :delete%></li>
+          <li><%= link_to "Settings", '#'%></li>
+        <%else%>
+          <li><%= link_to "Sign in", login_path %></li>
+        <%end%>
+
       </ul>
   </div>
 </div>
