--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,7 +10,7 @@
         <% if logged_in?  %>
           <li><%= link_to "Profile", current_user %></li>
           <li><%= link_to "Log out", logout_path, method: :delete%></li>
-          <li><%= link_to "Settings", '#'%></li>
+          <li><%= link_to "Settings", edit_user_path(current_user)%></li>
         <%else%>
           <li><%= link_to "Sign in", login_path %></li>
         <%end%>
