--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,7 +6,14 @@
         <h1>
           <%= @user.first_name %>
         </h1>
+        <p>Want to Delete Account?
+          <% if current_user?(@user) %>
+            <%= link_to "Delete account", @user, method: :delete , data: { confirm: "You sure?" } %>
+          <%end%>
+        </p>
       </section>
     </aside>
+
+
   </div>
 </div>
