User able to create questions.

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,10 @@
 <div class="container">
   <h1> Welcome To Trivia</h1>
-  <%= link_to "Sign up now!", signup_path , class: "btn btn-lg btn-primary" %>
+  <% if logged_in? %>
+       <%= link_to "Create Question!", question_path, class: "btn btn-lg btn-primary" %>
+    <% else %>
+        <%= link_to "Sign up!", signup_path, class: "btn btn-lg btn-primary" %>
+    <%end%>
 </div>
 
 
