--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,8 +9,12 @@
       <ul class="nav navbar-nav navbar-right">
         <% if logged_in?  %>
           <li><%= link_to "Profile", current_user %></li>
-          <li><%= link_to "Log out", logout_path, method: :delete%></li>
-          <li><%= link_to "Settings", edit_user_path(current_user)%></li>
+          <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><%= link_to "Edit Profile", edit_user_path(current_user)%></li>
+            <li><%= link_to "Log out", logout_path, method: :delete%></li>
+          </ul></li>
         <%else%>
           <li><%= link_to "Sign in", login_path %></li>
         <%end%>
