--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,19 +1,5 @@
-<div class="container">
-  <div class="row">
-    <aside class="col-md-4">
+<header class="jumbotron">
+  <h1>Welcome  <%= @user.first_name %></h1>
+</header>
+  <p>Want to Inactive account?<%= link_to "Inactivate account", deactivate_user_path(@user),  data: { confirm: "You sure?" } %></p>
 
-      <section class="user_info">
-        <h1>
-          <%= @user.first_name %>
-        </h1>
-        <p>Want to Delete Account?
-          <% if current_user?(@user) %>
-            <%= link_to "Delete account", @user, method: :delete , data: { confirm: "You sure?" } %>
-          <%end%>
-        </p>
-      </section>
-    </aside>
-
-
-  </div>
-</div>
