--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,10 +1,11 @@
-<div class="container">
-  <h1> Welcome To Trivia</h1>
+
+<header class="jumbotron">
+  <h1>Welcome To Trivia!</h1>
   <% if logged_in? %>
-       <%= link_to "Create Question!", question_path, class: "btn btn-lg btn-primary" %>
-    <% else %>
-        <%= link_to "Sign up!", signup_path, class: "btn btn-lg btn-primary" %>
-    <%end%>
-</div>
+    <%= link_to "Create Question!", question_path, class: "btn btn-lg btn-primary" %>
+  <% else %>
+    <%= link_to "Sign up!", signup_path, class: "btn btn-lg btn-primary" %>
+  <%end%>
+</header>
 
 
