--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,6 +1,7 @@
 <div class="form-width">
   <%= form_for(@question, url: question_path) do |f| %>
   <div class="form-group">
+    <%= render 'shared/error_messages' %>
     <%= f.label :title %>
     <%= f.text_area :title , class: "form-control"%>
   </div>
