--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,6 +3,7 @@
   <h1>Welcome To Trivia!</h1>
   <% if logged_in? %>
     <%= link_to "Create Question!", question_path, class: "btn btn-lg btn-primary" %>
+    <%= link_to "Answer Question", user_selections_path, class: "btn btn-lg btn-primary" %>
   <% else %>
     <%= link_to "Sign up!", signup_path, class: "btn btn-lg btn-primary" %>
   <%end%>
