--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,10 +8,11 @@
     </div>
       <ul class="nav navbar-nav navbar-right">
         <% if logged_in?  %>
-          <li><%= link_to "Profile", current_user %></li>
+          <li><%= link_to "Score Board", users_path %></li>
           <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Settings <span class="caret"></span></a>
           <ul class="dropdown-menu">
+            <li><%= link_to "Profile", user_path(current_user) %></li>
             <li><%= link_to "Edit Profile", edit_user_path(current_user)%></li>
             <li><%= link_to "Log out", logout_path, method: :delete%></li>
           </ul></li>
