--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
-<footer class="navbar navbar-fixed-bottom">
+
+<footer class="navbar navbar-default navbar-fixed-bottom">
   <div class="container">
     &copy; Copyright 2018
-
-
   </div>
 </footer>
+
