--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -5,6 +5,9 @@
     <%= f.label :title %>
     <%= f.text_area :title , class: "form-control"%>
   </div>
+    <div class="form-group">
+      <%= f.select :tag_list,options_for_select([["General","General"],["Sport","Sport"]]),{},class: "form-control"%>
+    </div>
     <%= f.fields_for :answers do |answer1| %>
       <div class="form-group">
         <%= answer1.text_field :title , class: "form-control", placeholder: answer1.object.is_correct ? 'Correct Answer' : 'Another Answer'%>
