--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -23,7 +23,7 @@
       </div>
 
       <div class="form-group">
-        <%= f.submit "Save changes", class: "btn btn-lg btn-primary btn-block" %>
+        <%= f.submit "Update profile", class: "btn btn-lg btn-primary btn-block" %>
       </div>
 
     <% end %>
