--- a/app/views/user_selections/new.html.erb
+++ b/app/views/user_selections/new.html.erb
@@ -24,6 +24,11 @@
   <% end %>
 </div>
 
+  <div class="pull-right fixed-bottom">
+    <%= link_to "Next", user_selections_path ,class: "btn btn-lg btn-primary"%>
+  </div>
+
+
 <% else %>
 
   There are no more questions available at this point.
