--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -6,7 +6,8 @@
     <%= f.text_area :title , class: "form-control"%>
   </div>
     <div class="form-group">
-      <%= f.select :tag_list,options_for_select([["General","General"],["Sport","Sport"]]),{},class: "form-control"%>
+      <%= f.label "Category"%>
+      <%= f.select :tag_list,options_for_select([["General"],["Sport"]]),{},class: "form-control"%>
     </div>
     <%= f.fields_for :answers do |answer1| %>
       <div class="form-group">
