--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,10 +2,11 @@
 <header class="jumbotron">
   <h1>Welcome To Trivia!</h1>
   <% if logged_in? %>
+    <div class="btn-group-vertical" role="group">
     <%= link_to "Create Question!", question_path, class: "btn btn-lg btn-primary" %>
     <%= link_to "Answer Question", user_selections_path, class: "btn btn-lg btn-primary" %>
     <%= link_to "Answer Question By Category", user_selections_category_path, class: "btn btn-lg btn-primary" %>
-
+    </div>
 <% else %>
     <%= link_to "Sign up!", signup_path, class: "btn btn-lg btn-primary" %>
   <%end%>
