--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,5 +2,5 @@
   <h1>Welcome  <%= @user.first_name %></h1>
   <p> Your Score: <%= @user.score%></p>
 </header>
-  <p>Please click on to deactivate account<%= link_to "Deactivate account", deactivate_user_path(@user),  data: { confirm: "Are you sure, you want to inactivate?" } %></p>
+<p>Click <%= link_to "here", deactivate_user_path(@user),  data: { confirm: "Are you sure, you want to inactivate?" } %> to deactivate your account</p>
 
