--- a/app/views/user_mailer/account_activation.html.erb
+++ b/app/views/user_mailer/account_activation.html.erb
@@ -3,7 +3,7 @@
 <p>Hi <%= @user.first_name %>,</p>
 
 <p>
-  Welcome to the Trivia App! Click on the link below to activate your account:
+  Welcome to the Trivia App! Click the link below to activate your account:
 </p>
 
 <%= link_to "Activate", edit_account_activation_url(@user.activation_token, email: @user.email) %>
