--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,7 @@
 
     <%= render 'layouts/header' %>
     <div class="container">
-    <% flash.each do |message_type, message| %>
-    <div class="alert alert-<%= message_type %>"><%= message %></div>
-    <% end %>
+      <%= render_flash %>
     <%= yield %>
     <%= render 'layouts/footer' %>
     </div>
