--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -7,7 +7,8 @@
   </div>
     <div class="form-group">
       <%= f.label "Category"%>
-      <%= f.select :tag_list,options_for_select([["General"],["Sport"]]),{},class: "form-control"%>
+      <% options = [["General"],["Sport"],["Geography"],["Entertainment"],["Science"],["History"],["Literature"],["Language"],["Religion"],["Movies"],["Television"],["Music"]]%>
+      <%= f.select :tag_list,options_for_select(options),{},class: "form-control"%>
     </div>
     <%= f.fields_for :answers do |answer1| %>
       <div class="form-group">
