--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,6 @@
-
-<div class="container thumbnail">
-  <h2>Edit Profile</h2>
+<div class="panel panel-default">
+  <div class="panel-heading">Edit Profile</div>
+  <div class="panel-body">
   <div class="form-width">
     <%= form_for(@user) do |f| %>
       <%= render 'shared/error_messages' %>
@@ -27,6 +27,8 @@
       </div>
 
     <% end %>
+
   </div>
 
+</div>
 </div>
