--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,10 @@
-<div class="container">
+
 <%= will_paginate %>
 
 
-  <div class="container">
-    <table class="table table-striped table-bordered">
+  <div class="panel panel-default">
+    <div class="panel-body">
+    <table class="table">
       <thead>
       <tr>
         <th>Username</th>
@@ -20,6 +21,6 @@
       </tbody>
     </table>
   </div>
+  </div>
 
   <%= will_paginate %>
-</div>
