--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,6 +9,7 @@
       <tr>
         <th>Username</th>
         <th>Score</th>
+        <th></th>
       </tr>
       </thead>
       <tbody>
@@ -16,6 +17,7 @@
         <tr>
           <td><%= user.username%></td>
           <td><%= user.score%></td>
+          <td><%= user.user_streak %></td>
         </tr>
       <% end %>
       </tbody>
