Form layout changes

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
-
-<div class="container thumbnail">
-  <h2>New User Sign Up!!</h2>
+<div class="panel panel-default">
+  <div class="panel-heading">New User Signup</div>
+  <div class="panel-body">
 
   <div class="form-width">
     <%= form_for(@user, url: signup_path) do |f| %>
@@ -37,4 +37,5 @@
     <% end %>
   </div>
 
+</div>
 </div>
