Global Player stats like average, user streak

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,10 @@
 
 <%= will_paginate %>
 
+<header class="jumbotron">
+
+  <p> Average score: <%= User.average_score %></p>
+</header>
 
   <div class="panel panel-default">
     <div class="panel-body">
