Fixing a bug where user “Next” after answering a question has to still keep the tag parameter.

--- a/app/views/user_selections/_new.html.erb
+++ b/app/views/user_selections/_new.html.erb
@@ -9,6 +9,7 @@
           <%= @user_selection.question.title %>
         </div>
         <%=f.hidden_field :question_id %>
+        <input type="hidden" name="user_selection[tag]" value="<%= @tag %>">
         <div data-toggle="buttons">
           <% @user_selection.question.answers.shuffle.each_with_index do |answer,i | %>
             <label class="btn btn-default form-control btn-block" for="answer_<  %= i %>">
